k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivebox-deployment
  namespace: default
  labels:
    app: hivebox
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hivebox
  template:
    metadata:
      labels:
        app: hivebox
    spec:
      containers:
      - name: hivebox-api
        image: hivebox-app:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
