k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hivebox-service
  namespace: default
spec:
  selector:
    app: hivebox
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
